--- a/com.endlessnetwork.tankwarriors.desktop
+++ b/com.endlessnetwork.tankwarriors.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=Tank Warriors
 Comment=Driving, shooting, explosions, and programming - all in one game
-Exec=com.endlessnetwork.tankWarriors.sh
+Exec=com.endlessnetwork.tankwarriors.sh
 Icon=com.endlessnetwork.tankwarriors
 Terminal=false
 Type=Application
