--- a/com.endlessnetwork.tankwarriors.desktop
+++ b/com.endlessnetwork.tankwarriors.desktop
@@ -5,4 +5,4 @@ Exec=com.endlessnetwork.tankwarriors.sh
 Icon=com.endlessnetwork.tankwarriors
 Terminal=false
 Type=Application
-Categories=Game;X-LearnToCode;
+Categories=Game;
